Adding downloading and uploading
